Remove redundant jvmArg declaration.